--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <a href="https://captcha-test.github.io/home">← Back to Home</a>
+  <a href="https://captcha-test.github.io/">← Back to Home</a>
   <h1>hCaptcha</h1>
   <form action="#" method="POST">
     <div class="h-captcha" data-sitekey="a11e692c-f250-48d2-9f9a-fce252ac9b6e"></div>
